--- a/CSS/admin_upload.css
+++ b/CSS/admin_upload.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #e7e7e7; /* Light background */
+  background-color: #f1f2f7; /* Light background */
   color: #1a1a1a; /* Dark text color */
 }
 
